Generate paper in PDF.

--- a/7-thesis/.gitattributes
+++ b/7-thesis/.gitattributes
@@ -1,1 +1,9 @@
 ieeeconf.cls linguist-vendored
+main.aux linguist-vendored
+main.bbl linguist-vendored
+main.blg linguist-vendored
+main.fdb_latexmk linguist-vendored
+main.fls linguist-vendored
+main.log linguist-vendored
+main.out linguist-vendored
+main.synctex.gz linguist-vendored
