--- a/7-thesis/.gitattributes
+++ b/7-thesis/.gitattributes
@@ -1,9 +1,9 @@
 ieeeconf.cls linguist-vendored
-main.aux linguist-vendored
-main.bbl linguist-vendored
-main.blg linguist-vendored
-main.fdb_latexmk linguist-vendored
-main.fls linguist-vendored
-main.log linguist-vendored
-main.out linguist-vendored
-main.synctex.gz linguist-vendored
+main.aux linguist-generated
+main.bbl linguist-generated
+main.blg linguist-generated
+main.fdb_latexmk linguist-generated
+main.fls linguist-generated
+main.log linguist-generated
+main.out linguist-generated
+main.synctex.gz linguist-generated
